--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "prettier": "^1.18.2"
     },
     "prettier": {
-        "semi": false,
+        "semi": true,
         "userTabs": true,
         "singleQuote": true
     }
