--- a/package.json
+++ b/package.json
@@ -5,17 +5,27 @@
     "main": "index.js",
     "scripts": {
         "lint": "eslint --format table --fix .",
-        "test": "jest --watchAll"
+        "test": "jest --watchAll",
+        "start": "node index.js",
+        "dev": "npm run start-redis && nodemon index.js",
+        "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
+        "start-redis": "redis-server --daemonize yes"
+    },
+    "jest": {
+        "testEnvironment": "node"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "cross-env": "^5.2.0",
         "eslint": "^6.4.0",
         "eslint-config-prettier": "^6.3.0",
         "eslint-plugin-prettier": "^3.1.1",
         "jest": "^23.6.0",
-        "prettier": "^1.18.2"
+        "nodemon": "^1.19.2",
+        "prettier": "^1.18.2",
+        "request": "^2.88.0"
     },
     "prettier": {
         "semi": true,
@@ -23,6 +33,11 @@
         "singleQuote": true
     },
     "dependencies": {
-        "hex-to-binary": "^1.0.1"
+        "body-parser": "^1.19.0",
+        "elliptic": "^6.4.1",
+        "express": "^4.17.1",
+        "hex-to-binary": "^1.0.1",
+        "redis": "^2.8.0",
+        "uuid": "^3.3.2"
     }
 }
