--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "scripts": {
         "lint": "eslint --format table --fix .",
         "test": "jest --watchAll",
-        "start": "node index.js",
-        "dev": "npm run start-redis && nodemon index.js",
+        "start": "npm run build-client && node index.js",
+        "dev": "npm run dev-client & npm run start-redis && nodemon index.js",
         "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
-        "start-redis": "redis-server --daemonize yes"
+        "start-redis": "redis-server --daemonize yes",
+        "build-client": "npm run clean && parcel build client/src/index.html --out-dir client/dist",
+        "dev-client": "npm run clean && parcel client/src/index.html --out-dir client/dist",
+        "clean": "rm -rf .cache client/dist"
     },
     "jest": {
         "testEnvironment": "node"
@@ -18,26 +21,61 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "babel-eslint": "^10.0.3",
         "cross-env": "^5.2.0",
-        "eslint": "^6.4.0",
+        "eslint": "^6.5.0",
+        "eslint-config-airbnb": "^18.0.1",
         "eslint-config-prettier": "^6.3.0",
+        "eslint-config-react-app": "^5.0.2",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-react": "^7.14.3",
+        "husky": "^3.0.7",
         "jest": "^23.6.0",
+        "lint-staged": "^9.4.0",
         "nodemon": "^1.19.2",
         "prettier": "^1.18.2",
+        "pretty-quick": "^1.11.1",
         "request": "^2.88.0"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "plugin:prettier/recommended"
+        ]
     },
     "prettier": {
         "semi": true,
         "userTabs": true,
         "singleQuote": true
     },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint"
+        }
+    },
+    "lint-staged": {
+        "*.+(js|jsx)": [
+            "pretty-quick --staged",
+            "eslint client/src/ --fix",
+            "git add"
+        ],
+        "*.+(json|css|md)": [
+            "prettier --write",
+            "git add"
+        ]
+    },
     "dependencies": {
         "body-parser": "^1.19.0",
         "elliptic": "^6.4.1",
         "express": "^4.17.1",
         "hex-to-binary": "^1.0.1",
+        "parcel-bundler": "^1.10.3",
+        "react": "^16.6.0",
+        "react-dom": "^16.6.0",
         "redis": "^2.8.0",
-        "uuid": "^3.3.2"
+        "uuid": "^3.3.2",
+        "request": "^2.88.0"
     }
 }
