--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "html-react-parser": "^0.9.1",
         "parcel-bundler": "^1.10.3",
         "react": "^16.6.0",
+        "react-bootstrap": "^0.32.4",
         "react-dom": "^16.6.0",
         "redis": "^2.8.0",
         "request": "^2.88.0",
