--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.10
+      - image: circleci/node:6.2.2
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -30,4 +30,4 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run test!
-      - run: npm run test
+      - run: npm test
