--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "start-redis": "redis-server --daemonize yes",
         "build-client": "npm run clean && parcel build client/src/index.html --out-dir client/dist",
         "dev-client": "npm run clean && parcel client/src/index.html --out-dir client/dist",
-        "clean": "rm -rf .cache client/dist"
+        "clean": "rm -rf .cache client/dist",
+        "coverage": "jest --collectCoverage=true"
     },
     "jest": {
         "testEnvironment": "node"
