--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/jest
     docker:
-      - image: circleci/node:8
+      - image: circleci/node:10.0
     steps:
       - checkout
       - restore_cache:
@@ -16,8 +16,11 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
+    steps:
+      - checkout
+      - run: npm install
       - run:
-        name: "Run Jest and Collect Coverage Reports"
-        command: jest --collectCoverage=true
+          name: "Run Jest and Collect Coverage Reports"
+          command: jest --collectCoverage=true
       - store_artifacts:
           path: coverage
