--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
 
       - run: npm ci
 
+      - codecov/upload:
+          flags: backend,unittest
+
       - run:
           name: Run Jest tests using test splitting
           command: |
@@ -25,3 +28,7 @@ jobs:
       - store_artifacts:
           path: test_results
           destination: test_results
+
+      - codecov/upload:
+          file: coverage/*.json
+          flags: frontend
