--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,24 @@
 version: 2
-orbs:
-  codecov: codecov/codecov@1.0.4
 jobs:
   build:
-    parallelism: 3
     docker:
-      # I want to make sure I know exactly what version I'm using
       - image: circleci/node:10.16.3
-
     working_directory: ~/repo
 
     steps:
       - checkout
 
-      - run: npm ci
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
 
-      - codecov/upload:
-          flags: backend,unittest
+      - run: npm install
 
-      - run:
-          name: Run Jest tests using test splitting
-          command: |
-            TESTFILES=$(circleci tests glob "test/**/*.test.js" | circleci tests split --split-by=timings)
-            npm test $TESTFILES
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
 
-      - store_test_results:
-          path: test_results
-
-      - store_artifacts:
-          path: test_results
-          destination: test_results
-
-      - codecov/upload:
-          file: coverage/*.json
-          flags: frontend
+      # run mocha!
+      - run: npm test
